# mini-java-compilator

./: .gitignore  1res.java  CMakeLists.txt  IVisitor.h  Makefile  README.md  bison.cpp  lex.cpp  main.cpp  s.java
makefiles/: Makefile  Makefile_lex  Makefile_ptr  Makefile_symboltable  Makefile_typechecker
nodes/: CCompundStm.h  CNumExp.h  INode.h
nodes/expressions/: COpExp.h
nodes/statements/: CPrintStm.h
resource/: Factorial.java  grammatic.flex  temp.flex
scripts/: build.sh  configure.sh  draw_dots.sh  install.sh  run_tests.sh
src/: IRT_builder_main.cpp  Utils.h  bison.cpp  bison.hpp  bison.output  bison_main.cpp  grammatic.bizon  grammatic.flex  grammatic.tab.c  grammatic.y  lex.cpp  lex.h  main.cpp  main_symboltable.cpp  main_tmp.cpp  main_typechecker.cpp  temp_grammatic.flex  y.tab.c
src/IRT/basic_blocks/: basic_block_collector.cpp  basic_block_collector.h  basic_block_divider.cpp  basic_block_divider.h  basic_block_graph.cpp  basic_block_graph.h  basic_block_optimizer.cpp  basic_block_optimizer.h  jump_canonization.cpp  jump_canonization.h
src/IRT/nodes/: Expressions.cpp  Expressions.h  INode.h  Statements.cpp  Statements.h
src/IRT/register_allocation/: ControlFlowGraphBuilder.cpp  ControlFlowGraphBuilder.h  IgnoreList.cpp  IgnoreList.h  InterferentGraphBuilder.cpp  InterferentGraphBuilder.h  RegisterAllocation.cpp  RegisterAllocation.h  TempLivnessFiller.cpp  TempLivnessFiller.h
src/IRT/utils/: AssemblyCommand.cpp  AssemblyCommand.h  Frame.cpp  Frame.h  Label.cpp  Label.h  PatternMatcher.cpp  PatternMatcher.h  SubtreeWrapper.cpp  SubtreeWrapper.h  Temporary.cpp  Temporary.h  TreePatterns.cpp  TreePatterns.h  enums.h  maps.h  symbol_table_utils.cpp  symbol_table_utils.h
src/IRT/visitors/: CBuildVisitor.cpp  CBuildVisitor.h  CCallSimplifierVisitor.cpp  CCallSimplifierVisitor.h  CEseqFloatVisitor.cpp  CEseqFloatVisitor.h  CLinearizeVisitor.cpp  CLinearizeVisitor.h  ConstEvaluateVisitor.cpp  ConstEvaluateVisitor.h  EmptyVisitor.cpp  EmptyVisitor.h  IVisitor.h  PrintVisitor.cpp  PrintVisitor.h
src/nodes/: INode.h
src/nodes/expressions/: CIdExp.cpp  CIdExp.h  CNumExp.cpp  CNumExp.h  COpExp.cpp  COpExp.h  IExpression.h
src/nodes/statements/: CAssignStm.cpp  CAssignStm.h  CCompoundStm.cpp  CCompoundStm.h  CCompundStm.h  CPrintStm.cpp  CPrintStm.h  CSimpleStm.cpp  CSimpleStm.h  IStatement.h
src/shared_ptrs_nodes/: CArgument.cpp  CArgument.h  CArgumentList.cpp  CArgumentList.h  CMainClass.cpp  CMainClass.h  CMainMethod.cpp  CMainMethod.h  CProgram.cpp  CProgram.h  Classes.cpp  Classes.h  Expressions.cpp  Expressions.h  INode.cpp  INode.h  Statements.cpp  Statements.h
src/shared_ptrs_visitors/: CConvertVisitor.cpp  CConvertVisitor.h  CPrintVisitor.cpp  CPrintVisitor.h  CalculateVisitor.cpp  CalculateVisitor.h  IVisitor.h
src/symbol_table/: CConstructSymbolTableVisitor.cpp  CConstructSymbolTableVisitor.h  PositionInfo.cpp  PositionInfo.h  SymbolInfo.cpp  SymbolInfo.h
src/type_checker/: CTypeCheckerVisitor.cpp  CTypeCheckerVisitor.h
src/visitors/: CPrintResults.cpp  CPrintResults.h  CPrintVisitor.cpp  CPrintVisitor.h  CalculateResults.cpp  CalculateResults.h  CalculateVisitor.cpp  CalculateVisitor.h  IVisitor.cpp  IVisitor.h  IVisitorResult.h
tests/IRT_builder/dots/: 1a.java_Main::main.dot  3a.java_Fac::ComputeFac.dot  3a.java_Factorial::main.dot
tests/IRT_builder/results/: 1a.java
tests/IRT_builder/testfiles/: 1a.java  2a.java  3a.java  BinarySearch.java  Factorial.java  alloc_test.java  bad_alloc.java  callNotUnd.java  callSimplificationTest.java  jumpCanTest.java
tests/type_checker/results/: 1.java  11a.java  1a.java  4a.java  4b.java  6a.java
tests/type_checker/testfiles/: 1.java  10a.java  11a.java  12a.java  12b.java  13a.java  13b.java  13c.java  13d.java  1a.java  2a.java  3a.java  3b.java  4a.java  4b.java  5a.java  6a.java  7a.java  7b.java  7c.java  8a.java  9a.java
